task(ccls-1697): Add Get Case Details (#23)
